--- a/index.html
+++ b/index.html
@@ -179,6 +179,43 @@
         <div class="container mt-4 pt-4">
             <h1 class="text-left">Skills</h1>
             <div class="row mt-4">
+                <div class="row">
+                    <div class="col-lg-4 mt-4">
+                        <div class="card servicesText">
+                            <div class="card-body">
+                                <i class='fas servicesIcon fa-search'></i>
+                                <h4 class="card-title mt-3">Backend Enginnering</h4>
+                                <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
+                                    Some quick example text to build on the card title and make up the bulk of the card's content.
+                                </p>
+                            </div>
+                        </div>  
+                    </div>
+    
+                    <div class="col-lg-4 mt-4">
+                        <div class="card servicesText">
+                            <div class="card-body">
+                                <i class='fas servicesIcon fa-shield-alt'></i>
+                                <h4 class="card-title mt-3">DevOps</h4>
+                                <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
+                                    Some quick example text to build on the card title and make up the bulk of the card's content.
+                                </p>
+                            </div>
+                        </div>  
+                    </div>
+    
+                    <div class="col-lg-4 mt-4">
+                        <div class="card servicesText">
+                            <div class="card-body">
+                                <i class='fas servicesIcon fa-wrench'></i>
+                                <h4 class="card-title mt-3">QA</h4>
+                                <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
+                                    Some quick example text to build on the card title and make up the bulk of the card's content.
+                                </p>
+                            </div>
+                        </div>  
+                    </div>
+                </div>
             </div>
     </section>
 
