--- a/index.html
+++ b/index.html
@@ -269,8 +269,7 @@
     <!-- footer section-->
     <footer id="footer">
         <div class="container-fluid">
-            <h1 class="text-left" style="color: #ffffff;
-            ;">Contact Me</h1>
+            <h1 class="text-left" style="color: #ffffff">Contact Me</h1>
             <!-- social media icons -->
             <div class="social-icons mt-4">
                 <a href="mailto: C.Tsegaye@outlook.com" ><i class="far fa-envelope"></i></a>
