Changed Titles of Skills and Removed Paragraphs

--- a/index.html
+++ b/index.html
@@ -184,10 +184,7 @@
                         <div class="card servicesText">
                             <div class="card-body">
                                 <i class='fas servicesIcon fa-search'></i>
-                                <h4 class="card-title mt-3">Backend Enginnering</h4>
-                                <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                                    Some quick example text to build on the card title and make up the bulk of the card's content.
-                                </p>
+                                <h4 class="card-title mt-3">JAVA</h4>
                             </div>
                         </div>  
                     </div>
@@ -196,10 +193,7 @@
                         <div class="card servicesText">
                             <div class="card-body">
                                 <i class='fas servicesIcon fa-shield-alt'></i>
-                                <h4 class="card-title mt-3">DevOps</h4>
-                                <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                                    Some quick example text to build on the card title and make up the bulk of the card's content.
-                                </p>
+                                <h4 class="card-title mt-3">SQL</h4>
                             </div>
                         </div>  
                     </div>
@@ -208,10 +202,7 @@
                         <div class="card servicesText">
                             <div class="card-body">
                                 <i class='fas servicesIcon fa-wrench'></i>
-                                <h4 class="card-title mt-3">QA</h4>
-                                <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                                    Some quick example text to build on the card title and make up the bulk of the card's content.
-                                </p>
+                                <h4 class="card-title mt-3">HTML, CSS, JavaScript</h4>
                             </div>
                         </div>  
                     </div>
