changed the size of the cards in skills section and added images of icons to folder

--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
                         </div>
                     </div>
                     <div class="row mt-3">
-                        <p> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                        <p> Content. <br>
+                            Content. <br>
+                            Content. <br>
                         </p>
                     </div>
                 </div>
@@ -103,8 +104,7 @@
                         <div class="card-body">
                             <i class="fas servicesIcon fa-clock"></i>
                             <h4 class="card-title mt-3">Website Development</h4>
-                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
+                            <p class="card-text mt-3">Content.
                             </p>
                         </div>
                     </div>  
@@ -114,8 +114,7 @@
                         <div class="card-body">
                             <i class='fas servicesIcon fa-layer-group'></i>
                             <h4 class="card-title mt-3">Website Design</h4>
-                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
+                            <p class="card-text mt-3">Content.
                             </p>
                         </div>
                     </div>  
@@ -126,8 +125,7 @@
                         <div class="card-body">
                             <i class='fas servicesIcon fa-server'></i>
                             <h4 class="card-title mt-3">Database Management</h4>
-                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
+                            <p class="card-text mt-3">Content.
                             </p>
                         </div>
                     </div>  
@@ -140,8 +138,7 @@
                         <div class="card-body">
                             <i class='fas servicesIcon fa-search'></i>
                             <h4 class="card-title mt-3">Backend Enginnering</h4>
-                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
+                            <p class="card-text mt-3">Content.
                             </p>
                         </div>
                     </div>  
@@ -152,8 +149,7 @@
                         <div class="card-body">
                             <i class='fas servicesIcon fa-shield-alt'></i>
                             <h4 class="card-title mt-3">DevOps</h4>
-                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
+                            <p class="card-text mt-3">Content.
                             </p>
                         </div>
                     </div>  
@@ -164,8 +160,7 @@
                         <div class="card-body">
                             <i class='fas servicesIcon fa-wrench'></i>
                             <h4 class="card-title mt-3">QA</h4>
-                            <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                                Some quick example text to build on the card title and make up the bulk of the card's content.
+                            <p class="card-text mt-3">Content.
                             </p>
                         </div>
                     </div>  
@@ -181,28 +176,32 @@
             <div class="row mt-4">
                 <div class="row">
                     <div class="col-lg-4 mt-4">
-                        <div class="card servicesText">
+                        <div class="card skillsText">
                             <div class="card-body">
-                                <i class='fas servicesIcon fa-search'></i>
-                                <h4 class="card-title mt-3">JAVA</h4>
+                                <h4 class="card-skill-title ml-3">
+                                    <img src="images/java icon.png" alt="Java icon" style="width: 50px;height: 50px">
+                                    JAVA
+                                </h4>
                             </div>
                         </div>  
                     </div>
     
                     <div class="col-lg-4 mt-4">
-                        <div class="card servicesText">
+                        <div class="card skillsText">
                             <div class="card-body">
-                                <i class='fas servicesIcon fa-shield-alt'></i>
-                                <h4 class="card-title mt-3">SQL</h4>
+                                <h4 class="card-skill-title ml-3">
+                                    <img src="images\sql icon.png" alt="SQL icon" style="width: 50px;height: 50px">
+                                    SQL</h4>
                             </div>
                         </div>  
                     </div>
     
                     <div class="col-lg-4 mt-4">
-                        <div class="card servicesText">
+                        <div class="card skillsText">
                             <div class="card-body">
-                                <i class='fas servicesIcon fa-wrench'></i>
-                                <h4 class="card-title mt-3">HTML, CSS, JavaScript</h4>
+                                <h4 class="card-skill-title ml-3">
+                                    <img src="images\web icons.png" alt="web icon" style="width: 70px;height: 50px">
+                                    HTML, CSS, JavaScript</h4>
                             </div>
                         </div>  
                     </div>
