--- a/index.html
+++ b/index.html
@@ -219,9 +219,11 @@
                         <img class="card-img-top" src="images/burritobros.png" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">Restuarant Simualtor</h4>
-                            <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p class="card-text">A way to simualate the usual operations of a Restuarant with Semaphores and Threads in the 
+                                Java Programming language.
+                            </p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="https://z-guy.github.io/Burrito_Bros/" target="_blank" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
