Changed name in Service block

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <div class="card servicesText">
                         <div class="card-body">
                             <i class='fas servicesIcon fa-wrench'></i>
-                            <h4 class="card-title mt-3">QA</h4>
+                            <h4 class="card-title mt-3">Software Enginnering</h4>
                             <p class="card-text mt-3">Content.
                             </p>
                         </div>
