Added a new row in the skills cards

--- a/index.html
+++ b/index.html
@@ -206,6 +206,39 @@
                         </div>  
                     </div>
                 </div>
+
+                <div class="row">
+                    <div class="col-lg-4 mt-4">
+                        <div class="card skillsText">
+                            <div class="card-body">
+                                <h4 class="card-skill-title ml-3">
+                                    <img src="images/java icon.png" alt="Java icon" style="width: 50px;height: 50px">
+                                    PHP
+                                </h4>
+                            </div>
+                        </div>  
+                    </div>
+    
+                    <div class="col-lg-4 mt-4">
+                        <div class="card skillsText">
+                            <div class="card-body">
+                                <h4 class="card-skill-title ml-3">
+                                    <img src="images\sql icon.png" alt="SQL icon" style="width: 50px;height: 50px">
+                                    ANGULAR</h4>
+                            </div>
+                        </div>  
+                    </div>
+    
+                    <div class="col-lg-4 mt-4">
+                        <div class="card skillsText">
+                            <div class="card-body">
+                                <h4 class="card-skill-title ml-3">
+                                    <img src="images\web icons.png" alt="web icon" style="width: 70px;height: 50px">
+                                    NODE.Js</h4>
+                            </div>
+                        </div>  
+                    </div>
+                </div>
             </div>
     </section>
 
